tests/assets/pkg/Install4/gold/test-0.gold
// No package installed yet.
===================
exec main.toit
Exit Code: 1
main.toit:3:8: error: Package for prefix 'pkg4_pre' not found
import pkg4_pre.pkg4
       ^~
main.toit:6:14: error: Unresolved identifier: 'identify'
  print pkg4.identify
             ^~
Compilation failed.
===================
exec main2.toit
Exit Code: 1
main2.toit:3:8: error: Package for prefix 'pkg1' not found
import pkg1
       ^~
main2.toit:6:14: error: Unresolved identifier: 'identify'
  print pkg1.identify
             ^~
Compilation failed.
===================
// Add registry so we can find packages.
===================
pkg registry add --local test-reg <TEST>/registry_git_pkgs
Exit Code: 0
===================
// Install pkg4 for 'main.toit', creating/updating a lock file.
===================
pkg install pkg4 --prefix=pkg4_pre
Exit Code: 0
Info: Package '<TEST>/git_pkgs/pkg4@4.9.9' installed with prefix 'pkg4_pre'
===================
// main.toit should work now.
===================
exec main.toit
Exit Code: 0
pkg4-4.9.9
===================
pkg install pkg1
Exit Code: 0
Info: Package '<TEST>/git_pkgs/pkg1@1.0.0' installed with prefix 'pkg1'
===================
// main2.toit should also work now.
===================
exec main2.toit
Exit Code: 0
pkg1-1.0.0pkg2-2.4.2pkg3-3.1.2
